[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/volume.gd" id="1_qhkvm"]

[node name="VolumeSlider" type="HSlider"]
offset_right = 358.0
offset_bottom = 16.0
min_value = -80.0
max_value = 0.0
script = ExtResource("1_qhkvm")

[connection signal="drag_ended" from="." to="." method="_on_drag_ended"]
[connection signal="value_changed" from="." to="." method="_on_value_changed"]
